[package]
name = "discord-webhook-events"
version = "0.3.0"
edition = "2021"
description = "Type-safe Rust definitions for Discord Webhook Events (APPLICATION_AUTHORIZED, ENTITLEMENT_CREATE/UPDATE/DELETE, and more)"
repository = "https://github.com/cycle-five/runecast-events-webhooks"
license = "MIT OR Apache-2.0"
keywords = ["discord", "webhook", "events", "serde"]
categories = ["api-bindings", "encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
