[package]
name = "discord-webhook-receiver"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Standalone Discord Webhook Events receiver that verifies and relays events to a backend"
repository = "https://github.com/cycle-five/runecast-events-webhooks"

[dependencies]
discord-webhook-events = { path = ".." }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ed25519-dalek = "2"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
